bugs/tests/fuzz-05-18-13-21-59/r_762_r_42_inverted-range_F10_P42_14_M2.stderr
likely_hits/r_762_r_42_inverted-range_F10_P42_14_M2.p4(2): [--Werror=type-error] error: ... < "b": not defined on ANYTYPE and string
 a = ((...) < ("b")), o = 1 };
      ^^^^^^^^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

